[tool.poetry]
name = "mdsplit"
version = "0.3"
description = "Split markdown files at headings"
readme = "README.md"
authors = ["Markus Straub"]
license = "MIT"
repository = "https://github.com/markusstraub/mdsplit"

[tool.poetry.scripts]
mdsplit = "mdsplit:run"

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
pytest = ">=7"
pytest-console-scripts = ">=1.3"
tox = ">=^3.25"
black = "*"
flake8 = "*"
ipykernel = "*"

[tool.pytest.ini_options]
addopts = ["-ra", "-W error"]

[tool.black]
line-length = 100
target-version = ['py310']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
